# GaaL

./: .gitignore  CMakeLists.txt  common.hpp  config.h  configwidget.cpp  configwidget.h  helper.h  robot.cpp  robot.h  robotsformation.cpp  robotsformation.h  sslworld.cpp  sslworld.h  sslworld.hpp
config/: Parsian.ini
physics/: pball.cpp  pball.h  pobject.cpp  pworld.h
proto/: zss_cmd.proto
pygrsim/: __init__.py  grsim_env.py  multiagent_rllib.py  pygrsim.py  pygrsim_c_wrapper.cpp  pygrsim_c_wrapper.h  test_pygrsim.py
test/: main.cpp
utils/: parammanager.cpp  parammanager.h  singleton.hpp
